<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChickTech</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">ChickTech Connect</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_event_detail">Event</string>
    <string name="action_rsvp">RSVP</string>
    <string name="action_logout">Logout</string>
    <string name="action_goto_map">Map</string>
    <string name="event_name_label">Event Name</string>
    <string name="rsvp_not">You have not RSVPd</string>
    <string name="rsvp_yes">You have RSVPd YES</string>
    <string name="rsvp_NO">You have RSVPd NO</string>
    <string name="date_label"></string>
    <string name="time_label"></string>
    <string name="location_label"></string>
    <string name="event_desc_label"></string>
    <string name="girls_going_label">Girls Are Going</string>
    <string name="calendar_icon">Calendar Icon</string>
    <string name="clock_icon">Clock Icon</string>
    <string name="location_icon">Location Icon</string>
    <string name="rsvp_icon">RSVP Icon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_new_event">New Event</string>
    <string name="title_activity_login">ChickTech</string>
    <string name="button_send">Send</string>
    <string name="title_activity_show_pop_up">ShowPopUp</string>
    <string name="name_hint">Name</string>
    <string name="change_button_label">Change</string>
    <string name="email_hint">me@domain.com</string>
    <string name="phone_number_hint">555-555-5555</string>
    <string name="address_line_1_hint">Address Line 1</string>
    <string name="address_line_2_hint">Address Line 2</string>
    <string name="city_hint">City</string>
    <string name="state_hint">State</string>
    <string name="zip_5_digit_hint"> Zip </string>
    <string name="why_chicktech_label">Why did you join ChickTech?</string>
    <string name="why_chicktech_hint">I joined ChickTech because...</string>
    <string name="what_technologies_label">What type of technologies are you interested in?</string>
    <string name="what_technologies_hint">Robots, web design, math</string>
    <string name="save_button_label">Save</string>
    <string name="address_hint">100 Home Lane\n\nSan Francisco, CA 00000</string>
    <string name="mentor_tagline_hint">Profession</string>
    <string name="student_tagline_hint"><![CDATA[School & Year]]></string>
    <string name="student_profile_tab_label">My Student</string>
    <string name="my_profile_tab_label">My Profile</string>
    <string name="mentor_profile_tab_label">My Mentor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_mentor_message">You don\'t have a mentor yet.</string>
    <string name="no_student_message">You don\'t have a student yet.</string>

</resources>
