<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tvEventName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name_label"
        android:textColor="@color/chick_tech_green"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvEventDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvEventName"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/event_desc_label" />

    <LinearLayout
        android:id="@+id/llDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEventDescription"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivCalendar"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/calendar_icon"
            android:src="@drawable/ic_calendar" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/llDate"
        android:gravity="center_vertical"
        android:layout_below="@+id/llDate" >

        <ImageView
            android:id="@+id/ivClock"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/clock_icon"
            android:src="@drawable/ic_clock" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/llTime"
        android:gravity="center_vertical"
        android:layout_below="@+id/llTime" >

        <ImageView
            android:id="@+id/ivLocation"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginRight="5dp"
            android:contentDescription="@string/location_icon"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRSVP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/llTime"
        android:gravity="center_vertical"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_below="@+id/llLocation" >

        <TextView
            android:id="@+id/tvRSVPStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rsvp_not" />

        <Button
            android:id="@+id/btnRSVP"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="@string/action_rsvp" />

    </LinearLayout>

</RelativeLayout>