<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.chicktech.chicktech.fragments.EditProfileFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:id="@+id/imgPhoto"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="#DDDDDD"
                android:scaleType="centerCrop" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:hint="@string/name_hint"
                android:id="@+id/etName"
                android:layout_alignTop="@+id/imgPhoto"
                android:layout_toRightOf="@+id/imgPhoto"
                android:layout_toEndOf="@+id/imgPhoto"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:singleLine="true"
                android:inputType="textPersonName"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etDetails"
                android:layout_toRightOf="@+id/imgPhoto"
                android:layout_below="@+id/etName"
                android:layout_alignBottom="@+id/imgPhoto"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:singleLine="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/change_button_label"
                android:id="@+id/btnChangeProfile"
                android:layout_alignBottom="@+id/imgPhoto"
                android:layout_alignLeft="@+id/imgPhoto"
                android:layout_alignRight="@+id/imgPhoto"
                style="?android:attr/borderlessButtonStyle"
                android:textSize="12sp"
                android:background="@color/teal"
                android:textColor="@android:color/white"
                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="60dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/llEmail"
                android:layout_marginBottom="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imgEmailIcon"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_mail" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_hint"
                    android:id="@+id/etEmail"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llEmail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:id="@+id/llPhone">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imgPhoneIcon"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_phone" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number_hint"
                    android:id="@+id/etPhoneNumber"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:inputType="phone"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llPhone"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="10dp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/imgAddrIcon"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_home"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="100"
                    android:orientation="vertical">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_line_1_hint"
                        android:id="@+id/etAddress1"
                        android:inputType="textPostalAddress"
                        android:singleLine="true"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address_line_2_hint"
                        android:id="@+id/etAddress2"
                        android:inputType="textPostalAddress"
                        android:singleLine="true"/>
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city_hint"
                        android:id="@+id/etCity"
                        android:inputType="textPostalAddress"
                        android:singleLine="true"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="100"/>
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/state_hint"
                            android:id="@+id/etState"
                            android:inputType="textCapCharacters"
                            android:singleLine="true"
                            android:maxLength="2"
                            android:layout_weight="1"/>
                        <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/zip_5_digit_hint"
                            android:id="@+id/etZip"
                            android:inputType="number"
                            android:singleLine="true"
                            android:maxLength="5"
                            android:layout_weight="1"/>
                        </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/why_chicktech_label"
                android:id="@+id/tvWhyLabel"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etWhy"
                android:inputType="text"
                android:hint="@string/why_chicktech_hint" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/what_technologies_label"
                android:id="@+id/tvWhatLabel"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etWhat"
                android:hint="@string/what_technologies_hint"
                android:inputType="text"
                android:imeOptions="actionDone"/>

        </LinearLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button_label"
            android:layout_marginTop="10dp"
            android:id="@+id/btnSave"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@android:color/white"
            android:background="@color/pink"/>
    </LinearLayout>


</ScrollView>
